--- a/src/components/pages/LandingPage.scss
+++ b/src/components/pages/LandingPage.scss
@@ -116,6 +116,9 @@
       }
       background-color: colors.$white;
     }
+    .mantine-Button-root:last-child:hover {
+      background-color: colors.$white;
+    }
   }
 }
 
